--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,8 +9,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Run a one-line script
-      run: echo Hello, world!
+    - name: Install dependencies
+      run: pip install requests
     - name: Run a multi-line script
       run: |
         ./get-reposense.py --release
