--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,3 +15,4 @@ jobs:
       run: |
         ./get-reposense.py --release
         java -jar RepoSense.jar --config ./configs --since 21/10/2017 --until 21/11/2019 --formats java adoc js
+        bash ./configs/travis/deploy_github_pages.sh
