--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,9 +11,11 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install dependencies
       run: pip install requests
-    - name: Run a multi-line script
+    - name: Clone RepoSense
+      run: ./get-reposense.py --release
+    - name: Generate report
+      run: java -jar RepoSense.jar --config ./configs --since 21/10/2017 --until 21/11/2019 --formats java adoc js
+    - name: Deploy Github Pages
       run: |
-        ./get-reposense.py --release
-        java -jar RepoSense.jar --config ./configs --since 21/10/2017 --until 21/11/2019 --formats java adoc js
         export GITHUB_TOKEN=${{ secrets.MY_TOKEN }}
         bash ./configs/ghactions/deploy_github_pages.sh
