--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,11 +11,10 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install dependencies
       run: pip install requests
-    - name: Clone RepoSense
-      run: ./get-reposense.py --release
     - name: Generate report
-      run: java -jar RepoSense.jar --config ./configs --since 21/10/2017 --until 21/11/2019 --formats java adoc js
+      run: bash ./run.sh
     - name: Deploy GitHub pages
       run: |
-        export GITHUB_TOKEN=${{ secrets.MY_TOKEN }}
+        export GITHUB_TOKEN=${{ secrets.ACCESS_TOKEN }}
+        export GITHUB_DEPLOY_KEY=${{ secrets.DEPLOY_KEY }}
         bash ./configs/ghactions/deploy_github_pages.sh
